# Lola

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  menu_cache.sqlite  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: lint.yml  tests.yml
Lola/: configs.py  main.py
Lola/core/: mapper.py  menu.py
Lola/services/bocuse/: client.py  mappers.py  service.py
core/: menu.py
scripts/: start-lint.sh
tests/: conftest.py  test_main.py  test_menu.py
tests/core/: test_menu.py
tests/fixtures/vcr_cassettes/: cardapio.yml  ficha_tecnica.yml  ficha_tecnica_does_not_exist.yml  receita.yml  receita_does_not_exist.yml
tests/pacts/: Consumer-Lola-Provider-Menu-pact.json
tests/services/bocuse/: test_client.py  test_mappers.py  test_service.py
